--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -78,7 +78,8 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 %\titlebanner{}        % These are ignored unless
 \preprintfooter{Draft}   % 'preprint' option specified.
 
-\title{Hazelnut: A Bidirectionally Typed \\ Structure Editor Calculus}
+\title{Hazelnut: A Bidirectionally Typed \\ Structure Editor
+ Calculus}
 %\subtitle{Modular Type Constructors}
 
 %\authorinfo{\vspace{-2px}}{}{}
@@ -96,7 +97,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 %  \emph{Structure editors} have long promised to alleviate these burdens by exposing only edit actions that  cause sensible changes to the program structure.
 % Existing designs for structure editors, however, are complex and somewhat \emph{ad hoc}. They also focus primarily on syntactic well-formedness, so programs can still be left semantically meaningless as they are being constructed.
 % Structure editors (e.g. Scratch) eliminate the possibility of syntax errors.
-
+\todo{why not title just ``hazelnut: a structure editor calculus''?}
 \emph{Structure editors} allow programmers to edit the tree structure of a program directly -- there are no syntax errors. This can have cognitive benefits, particularly for novice and end-user programmers (as evidenced by the popularity of structure editors like Scratch.) It also simplifies matters for tool designers, because they need not contend with malformed program text. %Structure editors for professional programmers are also under active development (e.g. \texttt{mbeddr}.)
 
 This paper defines Hazelnut, a {structure editor} based on a small bidirectionally typed lambda calculus that takes this approach two steps further: Hazelnut's edit actions operate over terms that are not just syntactically well-formed but also statically and dynamically meaningful.
@@ -1442,7 +1443,7 @@ Construct actions
 \section{Related Work}\label{sec:rw}
 %\subsection{Structure Editors}
 
-TODO: \url{http://research.nii.ac.jp/~hu/pub/hosc07.pdf}
+\todo{TODO: \url{http://research.nii.ac.jp/~hu/pub/hosc07.pdf}}
 
 Structured editing has been recognized as a way to avoid the possibility of syntax errors for decades.  An early example is the
 The Cornell Program Synthesizer~\cite{teitelbaum_cornell_1981}, first published in 1981.
@@ -1468,9 +1469,9 @@ Perhaps the systems most similar in spirit to Hazelnut are Lamdu~\cite{lamdu} an
 
 Our work differs from all of these in that we begin with a formal editor calculus and build from there, rather than starting with an implementation and leaving many of the formal details formally unspecified. For example, while Lamdu has many interesting features, there is no theoretical basis presented for their work -- it is a rather large body of Haskell code with an unclear (and indeed, often somewhat perplexing, in our experience) action model. Unison is also a rather large body of Haskell code, though its action model appears superficially more similar to ours. We maintain what we believe to be a stronger action sensibility invariant than Unison (i.e. in Unison, one must construct expressions from the outside-in.) These systems are rich sources of interesting ideas, however -- there is room enough for many different approaches in this (re-)emerging space.
 
-TODO: cite \url{http://cseweb.ucsd.edu/~lerner/pb.html}
+\todo{TODO: cite \url{http://cseweb.ucsd.edu/~lerner/pb.html}}
 
-TODO: cite \url{http://delivery.acm.org/10.1145/1060000/1056965/p1557-ko.pdf?ip=73.154.143.34&id=1056965&acc=AUTHOR-IZED&key=4D4702B0C3E38B35%2E4D4702B0C3E38B35%2E4D4702B0C3E38B35%2EC2CC0A83071F7605&CFID=780613712&CFTOKEN=33786941&__acm__=1462392463_f29fc98965004c61bfb1291d07756a23}
+\todo{TODO: cite} \url{http://delivery.acm.org/10.1145/1060000/1056965/p1557-ko.pdf?ip=73.154.143.34&id=1056965&acc=AUTHOR-IZED&key=4D4702B0C3E38B35%2E4D4702B0C3E38B35%2E4D4702B0C3E38B35%2EC2CC0A83071F7605&CFID=780613712&CFTOKEN=33786941&__acm__=1462392463_f29fc98965004c61bfb1291d07756a23}
 
 %Drag-and-drop / for novices: lots of examples, e.g. Alice and others
 %
@@ -1510,6 +1511,9 @@ It may also be possible to give a dynamics to incomplete expressions. Prior work
 $\hhole{\hhole{\hexp}}$. In our semantics given here, we eliminated them as they came up in a somewhat \emph{ad hoc} manner. We have not yet
 explored an equational theory for terms with holes, but intend to once our
 formalization effort is more mature.\todo{fix bib}
+
+\todo{new action form that makes actions extensible given proofs of
+admissiblity of a derived form, like prevSib}
 
 \begin{quote}
 In any case, these are but steps toward more graphical program-description
