added colored highlighting to zipper focus; adding sum types

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -67,6 +67,8 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \usepackage{enumitem}
 
 \usepackage{todonotes}
+\usepackage{xcolor}
+%\usepackage{adjustbox}
 
 \input{macros}
 \begin{document}
@@ -1430,6 +1432,8 @@ Statics
 Movement actions
 
 Construct actions
+
+\input{sumtypes}
 
 \section{Mechanization}
 \label{sec:mech}\label{sec:mt}
