--- a/macros.tex
+++ b/macros.tex
@@ -8,6 +8,7 @@
 \newcommand{\tarr}[2]{#1 \rightarrow #2}
 \newcommand{\tnum}{\texttt{num}}
 \newcommand{\tehole}{\llparenthesis\rrparenthesis}
+\newcommand{\tsum}[2]{{#1} + {#2}}
 
 \newcommand{\tcompat}[2]{#1 \sim #2}
 \newcommand{\tincompat}[2]{#1 \nsim #2}
@@ -22,6 +23,8 @@
 \newcommand{\hehole}{\llparenthesis\rrparenthesis}
 \newcommand{\hhole}[1]{\llparenthesis#1\rrparenthesis}
 \newcommand{\hindet}[1]{\lceil#1\rceil}
+\newcommand{\hinj}[2]{\texttt{inj}_{#1}({#2})}
+\newcommand{\hcase}[5]{\texttt{case}({#1},{#2}.{#3},{#4}.{#5})}
 
 \newcommand{\hGamma}{\dot{\Gamma}}
 \newcommand{\domof}[1]{\text{dom}(#1)}
@@ -31,7 +34,10 @@
 % ZTyp and ZExp
 \newcommand{\zlsel}[1]{{\bowtie}{#1}}
 \newcommand{\zrsel}[1]{{#1}{\bowtie}}
-\newcommand{\zwsel}[1]{{\triangleright}{#1}{\triangleleft}}
+
+%\newcommand{\zwsel}[1]{\adjustbox{cframe=blue}{\ensuremath{{\textcolor{blue}{\triangleright}}{#1}{\textcolor{blue}{\triangleleft}}}}}
+\newcommand{\zwsel}[1]{\colorbox{blue!10!white!30}{\ensuremath{{\textcolor{blue}{\triangleright}}{#1}{\textcolor{blue}{\triangleleft}}}}}
+%\newcommand{\zwsel}[1]{{\triangleright}{#1}{\triangleleft}}
 
 \newcommand{\removeSel}[1]{#1^{\diamond}}
 
@@ -55,6 +61,7 @@
 \newcommand{\aDel}{\mathtt{del}}
 \newcommand{\aReplace}[1]{\mathtt{replace}~#1}
 \newcommand{\aConstruct}[1]{\mathtt{construct}~#1}
+\newcommand{\aConstructx}[1]{#1}
 \newcommand{\aFinish}{\mathtt{finish}}
 
 \newcommand{\performAna}[5]{#1 \vdash #2 \xlongrightarrow{#4} #5 \Leftarrow #3}
@@ -67,6 +74,7 @@
 % Form
 \newcommand{\farr}{\mathtt{arrow}}
 \newcommand{\fnum}{\mathtt{num}}
+\newcommand{\fsum}{\mathtt{sum}}
 
 \newcommand{\fasc}{\mathtt{asc}}
 \newcommand{\fvar}[1]{\mathtt{var}~#1}
@@ -76,6 +84,9 @@
 \newcommand{\fnumlit}[1]{\mathtt{numlit}~#1}
 \newcommand{\fplus}{\mathtt{plus}}
 \newcommand{\fhole}{\mathtt{hole}}
+
+\newcommand{\finj}[1]{\mathtt{inj}~#1}
+\newcommand{\fcase}[2]{\mathtt{case~#1~#2}}
 
 % Talk about formal rules in example
 \newcommand{\refrule}[1]{\textrm{Rule~(#1)}}
