--- a/intro.tex
+++ b/intro.tex
@@ -1,12 +1,5 @@
 % !TEX root = hazelnut-popl17.tex
 
-%% Programs (and, by the Curry-Howard correspondence, proofs) are rich
-%% inductive structures. This fact is well understood amongst researchers
-%% and experienced programmers, but still somewhat obscure amongst
-%% programmers at large because programmers normally construct and interact
-%% with programs only indirectly, e.g. using a text editor composed with a
-%% parser.
-
 %% There are some benefits to this approach, to be sure, but the structural
 %% mismatch between programs and their textual representations also imposes
 %% various burdens.  For example, the primitive edit actions available in a
@@ -34,8 +27,8 @@
 % characters (i.e. \emph{text}.) 
 
 %Although programs can be represented as text, most text does not correspond to a syntactically well-formed and semantically well-defined program. 
-% Programming languages, and therefore programs themselves, are rich mathematical structures. 
-Well-typed programs are rich semantic structures, but human programmers typically construct and manipulate them only indirectly: by editing text that is parsed according to a textual syntax and then typechecked according to a static semantics. This indirection is of substantial practical utility, to be sure -- text editors and other text-based tools benefit from decades of development effort -- but it also introduces some fundamental complexity into the programming process. 
+% Programming languages, and therefore programs themselves, are rich mathematical structures.
+Programmers typically construct and manipulate well-typed expressions only indirectly, by editing text that is parsed according to a textual syntax and then typechecked according to a static semantics. This indirection has practical benefits, to be sure -- text editors and other text-based tools benefit from decades of development effort -- but it also introduces some fundamental complexity into the programming process. 
 
 % Every day, programmers use text-based tools to construct and manipulate programs.  
 % These programs are written in languages which defined by a textual syntax. 
@@ -46,15 +39,15 @@ Well-typed programs are rich semantic structures, but human programmers typicall
 %Doesn't really start out with a bang, IMHO. I like to start papers out with a "big" problem.
 %Most programming languages define a textual syntax. This allows programmers to use text editors and other standard text-based tools to construct and manipulate programs. While this is of substantial practical utility, it also introduces some fundamental complexity into the programming process. 
 
-First, it requires that programmers understand the various subtleties of textual syntax (e.g. the relative precedence of the various forms.) This can be particularly challenging for novice and end-user programmers \cite{Altadmri:2015:MCI:2676723.2677258}. %For example, one study of novice programmers found syntax errors (e.g. unbalanced parentheses) to be the most common class of errors.
+First, it requires that programmers understand the various subtleties of the textual syntax (e.g. the relative precedence of the various forms.) This can be particularly challenging for novice and end-user programmers \cite{Altadmri:2015:MCI:2676723.2677258}. %For example, one study of novice programmers found syntax errors (e.g. unbalanced parentheses) to be the most common class of errors.
 % Too much detail? 
 
-The fact that not every sequence of characters corresponds to a meaningful program also complicates matters for tool designers. In particular, program editors confront meaningless text quite frequently: in a dataset collected by Yoon and Myers consisting of 1460 hours of fine-grained edit logs from 21 programmers, 44.2\% of edits resulted in a malformed edit state \cite{6883030}. Some additional percentage of edit states were well-formed but ill-typed (the dataset did not record the imported libraries, so an exact percentage could not be determined.)  
-Some of these edit states could be attributed to programmer error, while others arose simply because the programmer was in the midst of a sequence of edit actions that left the text temporarily malformed or ill-typed. The language definition is silent about these edit states, so it is difficult to design useful editor services (e.g. syntax highlighting~\cite{sarkar2015impact}, type-aware code completion~\cite{Mooty:2010:CCC:1915084.1916348,Omar:2012:ACC:2337223.2337324}, and refactoring \todo{citation}) and to report localized, meaningful error messages\todo{citations}.
+The fact that not every sequence of characters corresponds to a meaningful program also complicates matters for tool designers. In particular, program editors encounter meaningless text on a regular basis: in a dataset collected by Yoon and Myers consisting of 1460 hours of fine-grained edit logs from 21 programmers, 44.2\% of edits resulted in a malformed edit state \cite{6883030}. Some additional percentage of edit states were well-formed but ill-typed (the dataset did not gather the imported libraries, so an exact percentage could not be determined.)  
+Some of these edit states arose because the programmer was in the midst of a sequence of edits that left the edit state temporarily malformed or ill-typed, while others could be attributed to programmer error. The language definition is silent about these edit states, so it is difficult to design useful editor services (e.g. syntax highlighting~\cite{sarkar2015impact}, type-aware code completion~\cite{Mooty:2010:CCC:1915084.1916348,Omar:2012:ACC:2337223.2337324}, and refactoring \todo{citation}), and to report localized, meaningful error messages\todo{citations}.
 %, or because the programmer has made a mistake. 
 % The syntax definition is silent about these situations, so it is difficult for tools to help programmers determine and execute a corrective course of action 
 
-Some editors have developed \emph{ad hoc} workarounds for this problem, e.g. they might attempt to use regular expressions to highlight malformed program text, insert closing delimiters automatically, use whitespace to guess where a delimiter is likely to appear, or recover from a type error by pretending that the type was as expected (if, indeed, an expected type can be determined.) These heuristic methods are often complex, and they can confuse or mislead the programmer. % This may also help explain why the error messages emitted by parsers and typecheckers are often quite baroque\todo{citations}.
+Many editors have developed \emph{ad hoc} workarounds for this problem, e.g. they might attempt to use regular expressions to highlight malformed program text, insert closing delimiters automatically, use whitespace to guess where a delimiter is likely to appear, or continue past a type error by pretending that the type was as expected (if, indeed, an expected type can be determined.) These heuristic methods are often complex, and they can confuse or mislead the programmer. % This may also help explain why the error messages emitted by parsers and typecheckers are often quite baroque\todo{citations}.
 
 % stuck editing a representation of the program instead of the structures
 % themselves. The editor does not restrict what the programmer may do: you
@@ -69,17 +62,17 @@ Some editors have developed \emph{ad hoc} workarounds for this problem, e.g. the
 % you want because of the type. Simply put, the primitive operations
 % available in text editors do not always correspond to sensible
 % transformations on the structure of the program.
-These complications have motivated a long line of research into \emph{structure editors}, i.e. program editors where edit actions maintain non-trivial structural invariants.  
+These complications have motivated a long line of research into \emph{structure editors}, i.e. program editors where the edit states are program structures, rather than text. This eliminates the possibility of syntax errors.
 
-Most structure editors are \emph{syntactic structure editors}, i.e. the edit states are trees with \emph{holes} representing branches that have yet to be constructed, and the edit actions are context-free tree transformations. Syntactic structure editors like Scratch \cite{Resnick:2009:SP:1592761.1592779} are popular in childhood educational settings, in part because they eliminate the possibility of syntax errors\todo{papers with case studies?}. 
+Most structure editors are \emph{syntactic structure editors}, i.e. the edit states are syntax trees with \emph{holes} that stand for branches of the tree that have yet to be constructed, and the edit actions are context-free tree transformations. For example, Scratch is a syntactic structure editor that has achieved success as a tool for teaching children how to program \cite{Resnick:2009:SP:1592761.1592779}. The Scratch language has a trivial static semantics (i.e. it requires only that every assignable has been declared) and an \emph{ad hoc} dynamic semantics (i.e. if evaluation encounters a hole or a dynamic error, it goes on to the next command.) 
 
-The Scratch language has a trivial static semantics (i.e. it requires only that every assignable has been declared) and an \emph{ad hoc} dynamic semantics (i.e. if evaluation encounters a hole or a dynamic error, it goes on to the next command.) Researchers have also developed syntactic structure editors for  languages with a more conventional semantics. For example, \texttt{mbeddr} is an editor for a C-like language \cite{voelter_mbeddr:_2012}, TouchDevelop is an editor for an object-oriented language \cite{tillmann_touchdevelop:_2011} and Lamdu is an editor for a functional language similar to Haskell \cite{lamdu}. These editors all have interesting user interfaces, but there are several foundational problems that complicate their design. 
+Researchers have also designed syntactic structure editors for  languages with a non-trivial static semantics. For example, \texttt{mbeddr} is an editor for a C-like language \cite{voelter_mbeddr:_2012}, TouchDevelop is an editor for an object-oriented language \cite{tillmann_touchdevelop:_2011} and Lamdu is an editor for a functional language similar to Haskell \cite{lamdu}. Each of these editors has an innovative user interface, but the non-trivial type and binding structure of the underlying language poses several challenges that complicates its design. 
 % \begin{itemize}
 % \item 
 
-First, there is an all too familiar problem: these languages do not have a clear formal semantics and metatheory, i.e. ``the implementation is the specification''. This makes it difficult to reason methodically about types and binding, and therefore, to design sound and useful editor services.
+First, there is an all too familiar challenge: these languages do not have a clear formal semantics and metatheory, i.e. ``the implementation is the specification''. This makes it difficult to reason methodically about types and binding, so, in turn, it is difficult to design sound and useful editor services.
 
-Developing a formal semantics and metatheory in the type theoretic style for the underlying language (e.g. following Standard ML \cite{Harper00atype-theoretic,mthm97-for-dart}) would go only part of the way towards addressing the challenges faced by structure editor designers, because a standard semantics assigns no formal meaning to \emph{incomplete terms}, i.e. terms with holes. Moreover, a syntactic structure editor does not guarantee that every edit state is statically meaningful, so incorporating holes into the static semantics would in any case be only a minor salve. Heuristics analagous to those that pervade textual program editors would still be needed to contend with the ill-typed edit states.
+Even if a formal semantics and metatheory for the underlying language were to be developed (e.g. following Standard ML \cite{Harper00atype-theoretic,mthm97-for-dart}), it would go only part of the way towards addressing the challenges faced by structure editor designers. First, a standard semantics assigns no formal meaning to \emph{incomplete terms}, i.e. terms with holes. Moreover, a syntactic structure editor does not guarantee that every edit state is statically meaningful -- only that it is syntactically well-formed -- so incorporating holes into the static semantics would in any case be only a minor salve. Heuristics analagous to those that pervade textual program editors would still be needed to contend with the ill-typed edit states.
 
 %This brings us to the contributions of this paper. 
 This paper defines Hazelnut,  a \emph{typed structure editor calculus} that addresses these foundational problems. 
@@ -104,4 +97,207 @@ Na\"ively, enforcing this injunction on ill-typed edit states would force progra
 
 The remainder of the paper is organized as follows. We begin with two example edit sequences to develop the reader's intuitions in Section
     \ref{sec:example}. We then give a detailed overview of Hazelnut's semantics and metatheory, which has been mechanized in Agda, in Section \ref{sec:hazel}. Hazelnut is designed as a {foundational} calculus, i.e. as a calculus that language and editor designers extend with higher level constructs. We show how Hazelnut's rich mechanized metatheory guides and constrains the development of such an extension in Section \ref{sec:extending}.  We consider several possible evaluation strategies for incomplete expressions in Section \ref{sec:dynamics}. In so doing, we discover interesting connections with gradual typing and contextual modal type theory. The former provides an interpretation of type holes, and the latter provides a logical interpretation of expression holes. It also suggests a principled design for an ``edit and resume'' feature. In Section \ref{sec:impl}, we briefly describe how Hazelnut's action semantics lends itself to efficient implementation as a functional reactive program. Our reference implementation is written using \lstinline{js_of_ocaml} and the OCaml \lstinline{React} library. In Section \ref{sec:rw}, we summarize related work. We conclude in Section \ref{sec:future} by describing our vision of a principled science of structure editing.
-\end{itemize}
+
+\begin{figure}[t!]
+\[
+\begin{array}{|c||c|c||l|l|}
+\hline
+\# & \textbf{Z-Expression} & 
+%\textbf{H-Expression} & 
+% \textbf{Type} & 
+\textbf{Next Action} & \textbf{Rule}
+\\
+\hline
+1 &
+\zwsel{\hhole{}} & 
+% \hhole{} &
+% \tehole 
+% &
+\aConstruct{\flam{x}} & 
+\text{(\ref{r:conelamhole})}
+\\ 2 &
+\hlam{x}{\hhole{}} : \tarr{\zwsel{\hhole{}}}{\hhole{}} & 
+% \hlam{x}{\hhole{}} : \tarr{\hhole{}}{\hhole{}} &
+% \tarr{\tehole}{\tehole} &
+\aConstruct{\fnum{}} &
+\text{(\ref{r:contnum})}
+\\ 3 &
+\hlam{x}{\hhole{}} : \tarr{\zwsel{\tnum{}}}{\hhole{}} &
+% \hlam{x}{\hhole{}} : \tarr{\tnum{}}{\hhole{}} &
+% \tarr{\tnum}{\tehole} & 
+\aMove{\dNext{}} & 
+\text{({\ref{r:movenextsib}})}
+\\ 4 &
+\hlam{x}{\hhole{}} : \tarr{\tnum}{\zwsel{\hhole{}}}
+&
+% \text{\textquotedbl}&
+% \tarr{\tnum}{\tehole} & 
+\aConstruct{\fnum{}} & 
+\text{(\ref{r:contnum})}
+\\ 5 &
+\hlam{x}{\hhole{}} : \tarr{\tnum{}}{\zwsel{\tnum{}}} & 
+% \hlam{x}{\hhole{}} : \tarr{\tnum{}}{\tnum{}} &
+% \tarr{\tnum}{\tnum} &
+\aMove{\dParent{}} & 
+\text{(\ref{r:moveparent})}
+\\ 6 &
+\hlam{x}{\hhole{}} : \zwsel{\tarr{\tnum{}}{\tnum{}}}
+&
+% \text{\textquotedbl}&
+% \tarr{\tnum}{\tnum} & 
+\aMove{\dPrev{}} & 
+\text{(\ref{r:moveprevsib})}
+\\ 7 &
+% &
+\zwsel{\hlam{x}{\hhole{}}} : \tarr{\tnum{}}{\tnum{}} & 
+% \tarr{\tnum}{\tnum} &
+% &
+\aMove{\dChild{}} & 
+\text{(\ref{r:movefirstchild-lam})}
+\\ 8 &
+% &
+\hlam{x}{\zwsel{\hhole{}}} : \tarr{\tnum{}}{\tnum{}} &
+% \tarr{\tnum}{\tnum} & 
+\aConstruct{\fvar{x}} & 
+\text{(\ref{r:conevar})}
+\\ 9 &
+% \hlam{x}{{x}} : \tarr{\tnum{}}{\tnum{}}
+% &
+\hlam{x}{\zwsel{{x}}} : \tarr{\tnum{}}{\tnum{}} &
+% \tarr{\tnum}{\tnum} & 
+\quad\textrm{---}
+&
+\quad\textrm{---}
+\\
+\hline
+% \multicolumn{5}{c}{\text{... now assume a context where $id : \tarr{\tnum}{\tnum}$ ...}}\\
+% \hline
+% 10 &
+% % \hhole{} &
+% \zwsel{\hhole{}} & 
+% \tehole &
+% \aConstruct{\fasc} & 
+% \text{(\ref{r:constructasc})}
+% \\
+% 11 &
+% % \hhole{} : \hhole{} &
+% \hhole{} : \zwsel{ \hhole{}} &
+% \tehole & 
+% \aConstruct{\fnum{}} & 
+% \text{(\ref{r:contnum})}
+% \\
+% 12 &
+% % \hhole{} :\tnum{} &
+% \hhole{} : \zwsel{\tnum{}} &
+% \tnum &
+% \aMove{\dPrev{}} & 
+% \text{(\ref{r:moveprevsib})}
+% \\
+% % %13 &
+% % %\hhole{} :\tnum{} &
+% % %\zwsel{\hhole{}} : \tnum{}
+% % %&
+% % %\aMove{\dPrev{}} & \refrule{\ref{r:moveprevsib}}
+% % %\\
+% 13 &
+% % \hhole{} :\tnum{}
+%  % &
+% \zwsel{\hhole{}} : \tnum{} &
+% \tnum & 
+% \aConstruct{ \fvar{id}} & 
+% \text{(\ref{r:conevar2})}
+% \\
+% 14 &
+% % \hhole{\textrm{$id$}} : \tnum{} &
+% \hhole{\zwsel{{\textrm{$id$}}}} : \tnum{} &
+% \tnum & 
+% \aConstruct{\fap{}} & 
+% \text{(\ref{r:coneapfn})}
+% \\
+% 15 &
+% % \hhole{\hap{{{\textrm{$id$}}}}{{\hhole{}}}} : \tnum{}
+% % &
+% \hhole{\hap{{{\textrm{$id$}}}}{\zwsel{\hhole{}}}} : \tnum{} &
+% \tnum & 
+% \aConstruct{\fnumlit{3}} &  
+% \text{(\ref{r:conenumnum})}
+% \\
+% 16 &
+% % \hhole{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}} : \tnum{}
+% % &
+% \hhole{\hap{{{\textrm{$id$}}}}{\zwsel{\hnum{3}}}} : \tnum{} &
+% \tnum & 
+% \aMove{\dParent{}} &  
+% \text{(\ref{r:moveparent-ap2})}
+% \\
+% 17 &
+% % %\hhole{\hap{{{\textrm{id}}}}{{\hnum{3}}}} : \tnum{}
+% % &
+% \hhole{\zwsel{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}}} : \tnum{} &
+% \tnum & 
+% \aMove{\dParent{}} &  
+% \text{(\ref{r:moveparent-hole})}
+% \\
+% 18 &
+% % %\hhole{\hap{{{\textrm{id}}}}{{\hnum{3}}}} : \tnum{}
+% % &
+% \zwsel{\hhole{{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}}}} : \tnum{} &
+% \tnum & 
+% \aFinish &  
+% \text{(\ref{r:finishana})}
+% \\
+% 19 &
+% % {\hap{{{\textrm{$id$}}}}{{\hnum{3}}}} : \tnum{}
+% % &
+% \zwsel{{{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}}}} : \tnum{} &
+% \tnum & 
+% \quad\textrm{---} & 
+% \quad\textrm{---}
+% \\
+% \hline
+
+%% 11 &
+%% {\textrm{id}} : \tarr{\tnum{}}{\tnum{}}
+%% &
+%% \hlam{x}{\zwsel{{x}}} : \tarr{\tnum{}}{\tnum{}}
+%% &
+%% \aMove{\dParent{}} & ?
+%% \\ 12 &
+%% %{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}
+%% &
+%% \zwsel{\hlam{x}{{{x}}}} : \tarr{\tnum{}}{\tnum{}}
+%% &
+%% \aMove{\dParent{}} & \refrule{15b} bad
+%% \\ 13 &
+%% %{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}
+%% &
+%% \zwsel{\hlam{x}{{{x}}} : \tarr{\tnum{}}{\tnum{}}}
+%% &
+%% \aConstruct{\fap{}} & \refrule{20h} bad
+%% \\ 14 &
+%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\hhole{}}
+%% &
+%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\zwsel{\hhole{}}}
+%% &
+%% \aConstruct{\fnumlit{3}} & \refrule{20l} bad
+%% \\ 15 &
+%% %\hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\hhole{3}}
+%% %&
+%% %\hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\zwsel{\hhole{3}}}
+%% %&
+%% %\aFinish{} & ?
+%% %\\
+%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{{\hnum{3}}}
+%% &
+%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\zwsel{{\hnum{3}}}}
+%% &
+%% \quad\textrm{---{}---}
+%% &
+%% \quad\textrm{---{}---}
+%% \\
+%% \hline
+\end{array}
+\]
+\caption{Constructing an identity function in Hazelnut (Lines~1--9), then  applying this function (assumed bound to $id$, not shown) to an argument~(Lines 10--19). The formal syntax and referenced rules in the final column are described in Section \ref{sec:hazel}.}
+\label{fig:first-example}
+\end{figure}
