--- a/intro.tex
+++ b/intro.tex
@@ -66,13 +66,14 @@ These complications have motivated a long line of research into \emph{structure 
 
 Most structure editors are \emph{syntactic structure editors}, i.e. the edit state is a syntax tree with \emph{holes} that stand for branches of the tree that have yet to be constructed, and the edit actions are context-free tree transformations. For example, Scratch is a syntactic structure editor that has achieved success as a tool for teaching children how to program \cite{Resnick:2009:SP:1592761.1592779}. 
 
-The Scratch language has a trivial static semantics, but researchers have also designed syntactic structure editors for  languages with a non-trivial static semantics. For example, \texttt{mbeddr} is an editor for a C-like language \cite{voelter_mbeddr:_2012}, TouchDevelop is an editor for an object-oriented language \cite{tillmann_touchdevelop:_2011} and Lamdu is an editor for a functional language similar to Haskell \cite{lamdu}. Each of these editors presents an innovative user interface, but the non-trivial type and binding structure of the underlying language poses several challenges that complicates its design. 
+The Scratch language has a trivial static semantics, but researchers have also designed syntactic structure editors for  languages with a non-trivial static semantics. For example, \texttt{mbeddr} is an editor for a C-like language \cite{voelter_mbeddr:_2012}, TouchDevelop is an editor for an object-oriented language \cite{tillmann_touchdevelop:_2011} and Lamdu is an editor for a functional language similar to Haskell \cite{lamdu}. Each of these editors presents an innovative user interface, but the non-trivial type and binding structure of the underlying language complicates its design. The reason for this is that a syntactic structure editor does not guarantee that every edit state is statically meaningful -- only that it is syntactically well-formed. Indeed, it is not entirely clear what it should mean for an edit state that contains holes to be statically meaningful. Consequently, heuristics analagous to those that pervade textual program editors also pervade these editors.
+
 % \begin{itemize}
 % \item 
 
-First, there is an all too familiar challenge: these languages do not have a clear formal semantics and metatheory, i.e. ``the implementation is the specification''. This makes it difficult to reason methodically about types and binding, so, in turn, it is difficult to design reliable editor services.
+% First, there is an all too familiar problem: these languages do not have a clear formal semantics and metatheory, i.e. ``the implementation is the specification''. This makes it difficult to reason methodically about types and binding, so, in turn, it is difficult to design reliable editor services.
 
-Even if a formal semantics and metatheory for the underlying language were forthcoming (e.g. following Standard ML \cite{Harper00atype-theoretic,mthm97-for-dart}), it would go only part of the way towards addressing the challenges faced by structure editor designers. First, a standard semantics assigns no formal meaning to \emph{incomplete terms}, i.e. terms with holes. Moreover, a syntactic structure editor does not guarantee that every edit state is statically meaningful -- only that it is syntactically well-formed -- so incorporating holes into the static semantics would in any case be only a minor salve. Heuristics analagous to those that pervade textual program editors would still be needed to contend with the ill-typed edit states.
+% Even if a formal semantics and metatheory for the underlying language were forthcoming (e.g. following Standard ML \cite{Harper00atype-theoretic,mthm97-for-dart}), it would go only part of the way towards addressing the challenges faced by structure editor designers. First, a standard semantics assigns no formal meaning to \emph{incomplete terms}, i.e. terms with holes. Moreover, a syntactic structure editor  -- so incorporating holes into the static semantics would in any case be only a minor salve. Heuristics analagous to those that pervade textual program editors would still be needed to contend with the ill-typed edit states.
 
 This paper seeks to address these foundational challenges. In particular, we introduce Hazelnut,  a \emph{typed structure editor}  organized around a bidirectionally typed lambda calculus extended to assign static meaning to expressions and types with {holes}. Hazelnut's formal \emph{action semantics} maintains the invariant that every edit state is a statically meaningful (i.e. well-typed) expression with a single superimposed \emph{focus} (following Huet's \emph{zipper pattern} \cite{JFP::Huet1997}.) Actions act relative to the expression or type in focus (which need not be a hole.)  %More specifically, actions are context-aware,  acting on an expression whose type is determined by its surroundings (e.g. a function argument), only actions consistent with that type are permitted. 
 
@@ -106,207 +107,3 @@ The remainder of the paper is organized as follows:
 \item In Section \ref{sec:rw}, we summarize the related work.
 \item We conclude in Section \ref{sec:future} by summarizing our vision of a principled science of structure editing rooted in type theory, and suggest a number of future directions.
 \end{itemize} 
-
-\begin{figure}[t!]
-\[
-\begin{array}{|c||c|c||l|l|}
-\hline
-\# & \textbf{Z-Expression} & 
-%\textbf{H-Expression} & 
-% \textbf{Type} & 
-\textbf{Next Action} & \textbf{Rule}
-\\
-\hline
-1 &
-\zwsel{\hhole{}} & 
-% \hhole{} &
-% \tehole 
-% &
-\aConstruct{\flam{x}} & 
-\text{(\ref{r:conelamhole})}
-\\ 2 &
-\hlam{x}{\hhole{}} : \tarr{\zwsel{\hhole{}}}{\hhole{}} & 
-% \hlam{x}{\hhole{}} : \tarr{\hhole{}}{\hhole{}} &
-% \tarr{\tehole}{\tehole} &
-\aConstruct{\fnum{}} &
-\text{(\ref{r:contnum})}
-\\ 3 &
-\hlam{x}{\hhole{}} : \tarr{\zwsel{\tnum{}}}{\hhole{}} &
-% \hlam{x}{\hhole{}} : \tarr{\tnum{}}{\hhole{}} &
-% \tarr{\tnum}{\tehole} & 
-\aMove{\dNext{}} & 
-\text{({\ref{r:movenextsib}})}
-\\ 4 &
-\hlam{x}{\hhole{}} : \tarr{\tnum}{\zwsel{\hhole{}}}
-&
-% \text{\textquotedbl}&
-% \tarr{\tnum}{\tehole} & 
-\aConstruct{\fnum{}} & 
-\text{(\ref{r:contnum})}
-\\ 5 &
-\hlam{x}{\hhole{}} : \tarr{\tnum{}}{\zwsel{\tnum{}}} & 
-% \hlam{x}{\hhole{}} : \tarr{\tnum{}}{\tnum{}} &
-% \tarr{\tnum}{\tnum} &
-\aMove{\dParent{}} & 
-\text{(\ref{r:moveparent})}
-\\ 6 &
-\hlam{x}{\hhole{}} : \zwsel{\tarr{\tnum{}}{\tnum{}}}
-&
-% \text{\textquotedbl}&
-% \tarr{\tnum}{\tnum} & 
-\aMove{\dPrev{}} & 
-\text{(\ref{r:moveprevsib})}
-\\ 7 &
-% &
-\zwsel{\hlam{x}{\hhole{}}} : \tarr{\tnum{}}{\tnum{}} & 
-% \tarr{\tnum}{\tnum} &
-% &
-\aMove{\dChild{}} & 
-\text{(\ref{r:movefirstchild-lam})}
-\\ 8 &
-% &
-\hlam{x}{\zwsel{\hhole{}}} : \tarr{\tnum{}}{\tnum{}} &
-% \tarr{\tnum}{\tnum} & 
-\aConstruct{\fvar{x}} & 
-\text{(\ref{r:conevar})}
-\\ 9 &
-% \hlam{x}{{x}} : \tarr{\tnum{}}{\tnum{}}
-% &
-\hlam{x}{\zwsel{{x}}} : \tarr{\tnum{}}{\tnum{}} &
-% \tarr{\tnum}{\tnum} & 
-\quad\textrm{---}
-&
-\quad\textrm{---}
-\\
-\hline
-% \multicolumn{5}{c}{\text{... now assume a context where $id : \tarr{\tnum}{\tnum}$ ...}}\\
-% \hline
-% 10 &
-% % \hhole{} &
-% \zwsel{\hhole{}} & 
-% \tehole &
-% \aConstruct{\fasc} & 
-% \text{(\ref{r:constructasc})}
-% \\
-% 11 &
-% % \hhole{} : \hhole{} &
-% \hhole{} : \zwsel{ \hhole{}} &
-% \tehole & 
-% \aConstruct{\fnum{}} & 
-% \text{(\ref{r:contnum})}
-% \\
-% 12 &
-% % \hhole{} :\tnum{} &
-% \hhole{} : \zwsel{\tnum{}} &
-% \tnum &
-% \aMove{\dPrev{}} & 
-% \text{(\ref{r:moveprevsib})}
-% \\
-% % %13 &
-% % %\hhole{} :\tnum{} &
-% % %\zwsel{\hhole{}} : \tnum{}
-% % %&
-% % %\aMove{\dPrev{}} & \refrule{\ref{r:moveprevsib}}
-% % %\\
-% 13 &
-% % \hhole{} :\tnum{}
-%  % &
-% \zwsel{\hhole{}} : \tnum{} &
-% \tnum & 
-% \aConstruct{ \fvar{id}} & 
-% \text{(\ref{r:conevar2})}
-% \\
-% 14 &
-% % \hhole{\textrm{$id$}} : \tnum{} &
-% \hhole{\zwsel{{\textrm{$id$}}}} : \tnum{} &
-% \tnum & 
-% \aConstruct{\fap{}} & 
-% \text{(\ref{r:coneapfn})}
-% \\
-% 15 &
-% % \hhole{\hap{{{\textrm{$id$}}}}{{\hhole{}}}} : \tnum{}
-% % &
-% \hhole{\hap{{{\textrm{$id$}}}}{\zwsel{\hhole{}}}} : \tnum{} &
-% \tnum & 
-% \aConstruct{\fnumlit{3}} &  
-% \text{(\ref{r:conenumnum})}
-% \\
-% 16 &
-% % \hhole{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}} : \tnum{}
-% % &
-% \hhole{\hap{{{\textrm{$id$}}}}{\zwsel{\hnum{3}}}} : \tnum{} &
-% \tnum & 
-% \aMove{\dParent{}} &  
-% \text{(\ref{r:moveparent-ap2})}
-% \\
-% 17 &
-% % %\hhole{\hap{{{\textrm{id}}}}{{\hnum{3}}}} : \tnum{}
-% % &
-% \hhole{\zwsel{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}}} : \tnum{} &
-% \tnum & 
-% \aMove{\dParent{}} &  
-% \text{(\ref{r:moveparent-hole})}
-% \\
-% 18 &
-% % %\hhole{\hap{{{\textrm{id}}}}{{\hnum{3}}}} : \tnum{}
-% % &
-% \zwsel{\hhole{{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}}}} : \tnum{} &
-% \tnum & 
-% \aFinish &  
-% \text{(\ref{r:finishana})}
-% \\
-% 19 &
-% % {\hap{{{\textrm{$id$}}}}{{\hnum{3}}}} : \tnum{}
-% % &
-% \zwsel{{{\hap{{{\textrm{$id$}}}}{{\hnum{3}}}}}} : \tnum{} &
-% \tnum & 
-% \quad\textrm{---} & 
-% \quad\textrm{---}
-% \\
-% \hline
-
-%% 11 &
-%% {\textrm{id}} : \tarr{\tnum{}}{\tnum{}}
-%% &
-%% \hlam{x}{\zwsel{{x}}} : \tarr{\tnum{}}{\tnum{}}
-%% &
-%% \aMove{\dParent{}} & ?
-%% \\ 12 &
-%% %{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}
-%% &
-%% \zwsel{\hlam{x}{{{x}}}} : \tarr{\tnum{}}{\tnum{}}
-%% &
-%% \aMove{\dParent{}} & \refrule{15b} bad
-%% \\ 13 &
-%% %{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}
-%% &
-%% \zwsel{\hlam{x}{{{x}}} : \tarr{\tnum{}}{\tnum{}}}
-%% &
-%% \aConstruct{\fap{}} & \refrule{20h} bad
-%% \\ 14 &
-%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\hhole{}}
-%% &
-%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\zwsel{\hhole{}}}
-%% &
-%% \aConstruct{\fnumlit{3}} & \refrule{20l} bad
-%% \\ 15 &
-%% %\hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\hhole{3}}
-%% %&
-%% %\hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\zwsel{\hhole{3}}}
-%% %&
-%% %\aFinish{} & ?
-%% %\\
-%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{{\hnum{3}}}
-%% &
-%% \hapP{{\textrm{id}} : \tarr{\tnum{}}{\tnum{}}}{\zwsel{{\hnum{3}}}}
-%% &
-%% \quad\textrm{---{}---}
-%% &
-%% \quad\textrm{---{}---}
-%% \\
-%% \hline
-\end{array}
-\]
-\caption{Constructing an identity function in Hazelnut. The formal syntax and the rules referenced in the final column are described in Section \ref{sec:hazel}.}
-\label{fig:first-example}
-\end{figure}
