made highlighting green and added phantom hole to keep height consistent

--- a/macros.tex
+++ b/macros.tex
@@ -1,4 +1,4 @@
-% !TEX root = editor-tfp16.tex
+% !TEX root = hazelnut-popl17.tex
 
 % HTyp and HExp
 \newcommand{\hcomplete}[1]{#1~\mathsf{complete}}
@@ -38,8 +38,8 @@
 %\newcommand{\zwsel}[1]{\adjustbox{cframe=blue}{\ensuremath{{\textcolor{blue}{\triangleright}}{#1}{\textcolor{blue}{\triangleleft}}}}}
 \newcommand{\zwsel}[1]{
   \setlength{\fboxsep}{0pt}
-  \colorbox{blue!10!white!100}{
-    \ensuremath{{\textcolor{blue}{\triangleright}}{#1}{\textcolor{blue}{\triangleleft}}}}
+  \colorbox{green!10!white!100}{
+    \ensuremath{{{\textcolor{Green}{{\hspace{-2px}\triangleright}}}}{#1}{\textcolor{Green}{\triangleleft{\vphantom{\tehole}}}}}}
 }
 %\newcommand{\zwsel}[1]{{\triangleright}{#1}{\triangleleft}}
 
