final tweaks to intro, started working on example

--- a/intro.tex
+++ b/intro.tex
@@ -39,11 +39,11 @@ Programmers typically construct and manipulate well-typed expressions only indir
 %Doesn't really start out with a bang, IMHO. I like to start papers out with a "big" problem.
 %Most programming languages define a textual syntax. This allows programmers to use text editors and other standard text-based tools to construct and manipulate programs. While this is of substantial practical utility, it also introduces some fundamental complexity into the programming process. 
 
-First, it requires that programmers understand the various subtleties of the textual syntax (e.g. the relative precedence of the various forms.) This can be particularly challenging for novice programmers \cite{Altadmri:2015:MCI:2676723.2677258}. %For example, one study of novice programmers found syntax errors (e.g. unbalanced parentheses) to be the most common class of errors.
+First, it requires that programmers learn the subtleties of the textual syntax (e.g. the precedence of the various forms.) This can be particularly challenging for novices \cite{Altadmri:2015:MCI:2676723.2677258}. %For example, one study of novice programmers found syntax errors (e.g. unbalanced parentheses) to be the most common class of errors.
 % Too much detail? 
 
-The fact that not every sequence of characters corresponds to a meaningful program also complicates matters for tool designers. In particular, program editors must contend with meaningless text on a regular basis: in a dataset collected by Yoon and Myers consisting of 1460 hours of fine-grained edit logs from 21 programmers, 44.2\% of edits resulted in a malformed edit state \cite{6883030}. Some additional percentage of edit states were well-formed but ill-typed (the dataset did not gather the imported libraries, so an exact percentage could not be determined.)  
-Some of these edit states arose because the programmer was in the midst of a sequence of edits that left the edit state temporarily malformed or ill-typed, while others could be attributed to programmer error. The language definition is silent about these edit states, so it is difficult to design useful editor services (e.g. syntax highlighting~\cite{sarkar2015impact}, type-aware code completion~\cite{Mooty:2010:CCC:1915084.1916348,Omar:2012:ACC:2337223.2337324}, and refactoring support \todo{citation}), and to report localized, meaningful error messages\todo{citations}.\todo{heuristics}
+The fact that not every sequence of characters corresponds to a meaningful program also complicates matters for tool designers. In particular, program editors must contend with meaningless text on a regular basis. In a dataset analyzed by Yoon and Myers consisting of 1460 hours of edit logs, 44.2\% of edit states were syntactically malformed \cite{6883030}. Some additional percentage of edit states were well-formed but ill-typed (the dataset did not contain enough information to determine the exact percentage.)  
+Some of these meaningless edit states arose because the programmer was in the midst of a sequence of edits that left the edit state transiently meaningless, while others could be attributed to the programmer making a mistake. Because the language definitions is silent about these edit states, it is difficult to design useful editor services, e.g. syntax highlighting~\cite{sarkar2015impact}, type-aware code completion~\cite{Mooty:2010:CCC:1915084.1916348,Omar:2012:ACC:2337223.2337324}, and refactoring support \todo{citation}. Editors must either disable these services when they encounter these edit states or develop \emph{ad hoc} heuristics, which can confuse or mislead the programmer.
 %, or because the programmer has made a mistake. 
 % The syntax definition is silent about these situations, so it is difficult for tools to help programmers determine and execute a corrective course of action 
 
@@ -66,7 +66,7 @@ These complications have motivated a long line of research into \emph{structure 
 
 Most structure editors are \emph{syntactic structure editors}, i.e. the edit state is a syntax tree with \emph{holes} that stand for branches of the tree that have yet to be constructed, and the edit actions are context-free tree transformations. For example, Scratch is a syntactic structure editor that has achieved success as a tool for teaching children how to program \cite{Resnick:2009:SP:1592761.1592779}. 
 
-The Scratch language has a trivial static semantics, but researchers have also designed syntactic structure editors for  languages with a non-trivial static semantics. For example, \texttt{mbeddr} is an editor for a C-like language \cite{voelter_mbeddr:_2012}, TouchDevelop is an editor for an object-oriented language \cite{tillmann_touchdevelop:_2011} and Lamdu is an editor for a functional language similar to Haskell \cite{lamdu}. Each of these editors presents an innovative user interface, but the non-trivial type and binding structure of the underlying language complicates its design. The reason for this is that a syntactic structure editor does not guarantee that every edit state is statically meaningful -- only that it is syntactically well-formed. Indeed, it is not entirely clear what it should mean for an edit state that contains holes to be statically meaningful. Consequently, heuristics analagous to those that pervade textual program editors also pervade these editors.
+The Scratch language has a trivial static semantics, but researchers have also designed syntactic structure editors for  languages with a non-trivial static semantics. For example, \texttt{mbeddr} is an editor for a C-like language \cite{voelter_mbeddr:_2012}, TouchDevelop is an editor for an object-oriented language \cite{tillmann_touchdevelop:_2011} and Lamdu is an editor for a functional language similar to Haskell \cite{lamdu}. Each of these editors presents an innovative user interface, but the non-trivial type and binding structure of the underlying language complicates its design. The reason is that a syntactic structure editor does not guarantee that every edit state is statically meaningful -- only that it is well-formed. Indeed, it is not entirely clear what it should mean for term with holes to be statically meaningful. Consequently, heuristics analagous to those that pervade textual program editors also pervade these syntactic structure editors.
 
 % \begin{itemize}
 % \item 
@@ -75,9 +75,9 @@ The Scratch language has a trivial static semantics, but researchers have also d
 
 % Even if a formal semantics and metatheory for the underlying language were forthcoming (e.g. following Standard ML \cite{Harper00atype-theoretic,mthm97-for-dart}), it would go only part of the way towards addressing the challenges faced by structure editor designers. First, a standard semantics assigns no formal meaning to \emph{incomplete terms}, i.e. terms with holes. Moreover, a syntactic structure editor  -- so incorporating holes into the static semantics would in any case be only a minor salve. Heuristics analagous to those that pervade textual program editors would still be needed to contend with the ill-typed edit states.
 
-This paper seeks to address these foundational challenges. In particular, we introduce Hazelnut,  a \emph{typed structure editor}  organized around a bidirectionally typed lambda calculus extended to assign static meaning to expressions and types with {holes}. Hazelnut's formal \emph{action semantics} maintains the invariant that every edit state is a statically meaningful (i.e. well-typed) expression with a single superimposed \emph{focus} (following Huet's \emph{zipper pattern} \cite{JFP::Huet1997}.) Actions act relative to the expression or type in focus (which need not be a hole.)  %More specifically, actions are context-aware,  acting on an expression whose type is determined by its surroundings (e.g. a function argument), only actions consistent with that type are permitted. 
+This paper seeks to address these foundational challenges from first principles. We introduce Hazelnut,  a \emph{typed structure editor}  based on a small bidirectionally typed lambda calculus extended to assign static meaning to expressions and types with {holes}. Hazelnut's formal \emph{action semantics} maintains the invariant that every edit state is a statically meaningful (i.e. well-typed) expression with a single superimposed \emph{focus} (following Huet's \emph{zipper pattern} \cite{JFP::Huet1997}.) Actions act relative to the expression or type in focus (which need not be a hole.)  %More specifically, actions are context-aware,  acting on an expression whose type is determined by its surroundings (e.g. a function argument), only actions consistent with that type are permitted. 
 
-Na\"ively, enforcing this injunction on ill-typed edit states would force programmers to construct programs in a rigid ``outside-in'' manner. For example, the programmer would often need to construct the outer function application form before identifying the intended function. To avoid this problem, Hazelnut automatically places newly constructed expressions inside a hole if the expression's type is inconsistent with the expected type. This safely defers the type consistency check until the expression inside the hole is \emph{finished}. In other words, holes appear both at the leaves and at the internal nodes of the syntax tree that remain under construction. %In short, Hazelnut is a \emph{bidirectionally typed structure editor calculus}. %Actions act at a programmer-indicate subtree, called the \emph{focus} (which is defined following Huet's zipper pattern.) 
+Na\"ively, enforcing this injunction on ill-typed edit states would force programmers to construct programs in a rigid ``outside-in'' manner. For example, the programmer might need to construct the outer function application form before identifying the intended function. To avoid this problem, Hazelnut leaves newly constructed expressions inside a hole if the expression's type is inconsistent with the expected type. This meaningfully defers the type consistency check until the expression inside the hole is \emph{finished}. In other words, holes appear both at the leaves and at the internal nodes of the typed syntax tree that remain under construction. %In short, Hazelnut is a \emph{bidirectionally typed structure editor calculus}. %Actions act at a programmer-indicate subtree, called the \emph{focus} (which is defined following Huet's zipper pattern.) 
 
 % By defining \emph{holes} as a language construct, for both expressions as types, Hazelnut enables type-aware actions that always leave the program in both a structurally and semantically well-defined state. 
 %In Hazelnut, expressions and types with \emph{holes} have a well-defined static semantics. Edit actions are type-aware and leave the program in both a structurally and semantically well-defined state. 
@@ -94,16 +94,17 @@ Na\"ively, enforcing this injunction on ill-typed edit states would force progra
 
 
 
-The remainder of the paper is organized as follows:
+The remainder of this paper is organized as follows:
 \begin{itemize}[noitemsep,nolistsep]
 \item We begin in Section
     \ref{sec:example} with two example edit sequences to develop the reader's intuitions.  
-\item We then give a detailed overview of Hazelnut's semantics and metatheory, which has been mechanized in Agda, in Section \ref{sec:hazel}. 
+\item We then give a detailed overview of Hazelnut's semantics and metatheory, which have been mechanized using the Agda proof assistant, in Section \ref{sec:hazel}.
 \item Hazelnut is designed as a {foundational} calculus, i.e. as a calculus that language and editor designers extend with higher level constructs. We show how Hazelnut's rich mechanized metatheory guides and constrains the development of such an extension in Section \ref{sec:extending}. 
 \item In Section \ref{sec:impl}, we briefly describe how Hazelnut's action semantics lends itself to efficient implementation as a functional reactive program. Our reference implementation is written using \lstinline{js_of_ocaml} and the OCaml \lstinline{React} library.
  
-\item We consider several possible evaluation strategies for incomplete expressions in Section \ref{sec:dynamics}. In so doing, we discover interesting connections with gradual typing and contextual modal type theory. The former provides an interpretation of type holes, and the latter provides a logical interpretation of expression holes. It also suggests a principled design for an ``edit and resume'' feature. 
+\item This paper is primarily concerned with the static semantics of incomplete expressions. However, we consider the space of possible evaluation strategies for incomplete expressions in Section \ref{sec:dynamics}. In so doing, we discover interesting connections with gradual typing and contextual modal type theory. The former provides an interpretation of type holes, and the latter provides a logical interpretation of expression holes. It also suggests a principled design for an ``edit and resume'' feature.\todo{revise this one} 
 
 \item In Section \ref{sec:rw}, we summarize the related work.
-\item We conclude in Section \ref{sec:future} by summarizing our vision of a principled science of structure editing rooted in type theory, and suggest a number of future directions.
+\item We conclude in Section \ref{sec:future} by summarizing this vision of a principled science of structure editing rooted in type theory, and suggest a number of future directions.
 \end{itemize} 
+\todo{summarize contents of the supplement here?}
